--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,19 @@
         .post-card-container:hover{
             transform: scale(1.1);/*鼠标放上之后元素变成1.4倍大小*/
         }
+        .tag{
+            color: #d8d8d8;
+            padding: 4px;
+            border-radius: .25rem;
+            text-decoration: none;
+            background-color: #4b4949;
+            transition: all 0.6s;
+        }
+        .tag:hover{
+            background-color: #4b4949;
+            text-decoration: none;
+            color: #1abc9c;
+        }
         .firstpage{
             margin-right: auto;
             margin-left: auto;
