--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,11 +28,11 @@
 
 {% block content %}
 <div class="container-fluid" style="background-color: #2c2a2a;padding-top: 70px;padding-bottom: 80px;">
+
     <div class="text-center" >
-        <div id="firstpage" class="firstpage" >
+        <div id="firstpage" class="firstpage" >         <!--首页默认文章列表-->
                 {% if lenth != 0 %}
                     {% for i in range(lenth) %}
-{#                        <div style="padding-left: 322.6px;padding-right: 322.6px">#}
                             <a href="/post/{{ user_Post[i].Publish_Date.year }}/{{ user_Post[i].Publish_Date.month }}/{{ user_Post[i].Id }}" style="text-decoration: none;">
                                 <div class="post-card-container" onmouseover="funcon" onmouseout="funcout" style="background-image: url(../static/Upload_Files/img/{{ user_Post[i].Cover_Picture_Name }});">
                                     <h2 class="posttitle">{{ user_Post[i].Title }}</h2>
@@ -74,6 +74,14 @@
             </div>
         </div>
     {% endif %}
+    <!--标签云-->
+    <div class="post-select">
+        <h5 style="color: #b0b0b0">标签云</h5>
+        <br>
+        {% for tag in index_tag %}
+            <a href="/tag/{{ tag.Id }}" class="tag">{{ tag.Title }}</a>
+        {% endfor %}
+    </div>
 
     <div id="copy" style="visibility: hidden; display: none">
 {#        <div style="padding-left: 322.6px;padding-right: 322.6px">#}
