guest ask to edit url

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -159,7 +159,7 @@
                 <label style="color: #b0b0b0;font-size: 12px;margin-right: 60px">友情链接:  </label>
                 <a href="http://git.careyou.xin" style="color: #1abc9c; margin-right: 15px; font-size: 13px">• MyGitHub</a>
                 <a href="http://rooins.careyou.xin" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• 袋鼠共享打印</a>
-                <a href="https://me.csdn.net/ha_weii" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• Minza的博客</a>
+                <a href="https://me.csdn.net/ha_weii" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• Minz的博客</a>
                 <a href="https://me.csdn.net/salove_y" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• 携手凡生的博客</a>
                 <a href="http://blog.51cto.com/anfishr" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• 一百个小排的博客</a>
                 <br>
