--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,8 +23,6 @@
             background-repeat: no-repeat;
             height: 248px;
             width: 844px;
-            margin-right: auto;
-            margin-left: auto;
             border-radius:9px;
             padding-top: 90px;
             padding-bottom: 90px;
@@ -58,6 +56,11 @@
             margin-left: auto;
             padding-top: 90px;
             padding-bottom: 45px;
+        }
+        .center {
+            display: table;
+            margin-left: auto;
+            margin-right: auto;
         }
         span{
             color: white;
