change tag details page style

--- a/app/templates/tag_details.html
+++ b/app/templates/tag_details.html
@@ -13,7 +13,7 @@
 {% block content %}
 <div class="container-fluid" style="background-color: #2c2a2a;padding-top: 70px;padding-bottom: 80px;">
     <div class="text-center" >
-        <div id="firstpage">
+        <div id="firstpage" class="center">
             {% if lenth != 0 %}
                 {% for i in range(lenth) %}
 {#                    <div style="padding-left: 322.6px;padding-right: 322.6px">#}
