--- a/app/templates/writer.html
+++ b/app/templates/writer.html
@@ -90,7 +90,9 @@
                     <div>
                         <label style="color: #1abc9c;">markdown文档 ：</label> <input type="file" name="markdown" required="required">
                     </div>
-
+                    <div>
+                        <label style="color: #1abc9c;">背景音乐(可选) ：</label> <input type="file" name="music" required="required">
+                    </div>
 
                     <br>
                     <br>
