--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
                 {% if lenth != 0 %}
                     {% for i in range(lenth) %}
                             <a href="/post/{{ user_Post[i].Publish_Date.year }}/{{ user_Post[i].Publish_Date.month }}/{{ user_Post[i].Id }}" style="text-decoration: none;">
-                                <div class="post-card-container" onmouseover="funcon" onmouseout="funcout" style="background-image: url(../static/Upload_Files/img/{{ user_Post[i].Cover_Picture_Name }});">
+                                <div class="post-card-container" onmouseover="funcon" onmouseout="funcout" style="background-image: url(../static/Upload_Files/article/{{ user_Post[i].Dir_Name }}/{{ user_Post[i].Cover_Picture_Name }});">
                                     <h2 class="posttitle">{{ user_Post[i].Title }}</h2>
                                     <br>
                                     <div class="row">
@@ -114,7 +114,7 @@
                     for(var j =0;j<data.objects.length;j++){            // 循环产生新的订单列表
                         var firstpage = document.getElementById("firstpage");
 
-                        var url = "url(../static/Upload_Files/img/" + data.objects[j].Cover_Picture_Name +")";
+                        var url = "url(../static/Upload_Files/article/" + data.objects[j].Dir_Name + "/" + data.objects[j].Cover_Picture_Name +")";
                         var Href = "/post/"+ data.objects[j].Publish_year+"/"+data.objects[j].Publish_month+"/"+data.objects[j].Id;
                         $("#img_url").css("background-image", url);
                         $("#title").text(data.objects[j].Title);
