--- a/app/templates/tag_details.html
+++ b/app/templates/tag_details.html
@@ -18,7 +18,7 @@
                 {% for i in range(lenth) %}
 {#                    <div style="padding-left: 322.6px;padding-right: 322.6px">#}
                         <a href="/post/{{ user_Post[i].Publish_Date.year }}/{{ user_Post[i].Publish_Date.month }}/{{ user_Post[i].Id }}" style="text-decoration: none;">
-                            <div class="post-card-container" style="background-image: url(../static/Upload_Files/img/{{ user_Post[i].Cover_Picture_Name }});">
+                            <div class="post-card-container" style="background-image: url(../static/Upload_Files/article/{{ user_Post[i].Dir_Name }}/{{ user_Post[i].Cover_Picture_Name }});">
                                 <h2 class="posttitle">{{ user_Post[i].Title }}</h2>
                                 <br>
                                 <div class="row">
@@ -85,7 +85,7 @@
                     for(var j =0;j<data.objects.length;j++){            // 循环产生新的订单列表
                         var firstpage = document.getElementById("firstpage");
 
-                        var url = "url(../static/Upload_Files/img/" + data.objects[j].Cover_Picture_Name +")";
+                        var url = "url(../static/Upload_Files/article/" + data.objects[j].Dir_Name + "/" + data.objects[j].Cover_Picture_Name +")";
                         var Href = "/post/"+ data.objects[j].Publish_year+"/"+data.objects[j].Publish_month+"/"+data.objects[j].Id;
                         $("#img_url").css("background-image", url);
                         $("#title").text(data.objects[j].Title);
