--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -69,7 +69,7 @@
 
 {% block access %}
     {% for i in posts.tags %}
-        {% if posts.Music_Name is not None %}
+        {% if posts.Music_Name is not none %}
             <div class="col-md-auto offset-md-7" style="text-align: right">
                 <audio id="music" controls preload="preload" autoplay="autoplay" loop="loop" style="">
                     <source src="/static/Upload_Files/article/{{ posts.Dir_Name }}/{{ posts.Music_Name }}" type="audio/mpeg" />
