--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -70,7 +70,10 @@
 {% block access %}
     {% for i in posts.tags %}
         {% if posts.Music_Name is not none %}
-            <div class="col-md-auto offset-md-7" style="text-align: right">
+            <div class="col-md-auto offset-md-5" style="background-color: rgba(6,6,6,0.35);padding-right: 0px">
+                <label style="color: white;padding: 12px;margin: 1px">{{ posts.Music_Name }}</label>
+            </div>
+            <div class="col-md-auto " style="text-align: right">
                 <audio id="music" controls preload="preload" autoplay="autoplay" loop="loop" style="">
                     <source src="/static/Upload_Files/article/{{ posts.Dir_Name }}/{{ posts.Music_Name }}" type="audio/mpeg" />
                 </audio>
@@ -78,6 +81,19 @@
         {% endif %}
     {% endfor %}
 {% endblock access %}
+
+{% block musicname %}
+{#    <div class="row" style="direction: rtl">#}
+{#        <div style="direction: rtl">#}
+{#            <label style="color: white;direction: rtl">{{ posts.Music_Name }}</label>#}
+{#        </div>#}
+{#    </div>#}
+{#    <div class="row">#}
+{#        <div class="col-md-auto offset-md-7" style="text-align: right">#}
+{#            <label style="color: white;direction: rtl">{{ posts.Music_Name }}</label>#}
+{#        </div>#}
+{#    </div>#}
+{% endblock musicname %}
 
 {% block content %}
 <div class="container-fluid" style="background-color: #ebebeb;padding-top: 70px;padding-bottom: 80px;">
