--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -136,6 +136,10 @@
         {% endblock access %}
 
     </div>
+    {% block musicname %}
+
+    {% endblock musicname %}
+
     {% if g.current_user_name != 'null' %}
         <div class="row">
             <label style="color: red;padding-left: 20px;font-size: 12px;">({{ g.current_user_name }})</label><a href="/logout" style="font-size: 12px">&nbsp退出</a>
