--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -70,11 +70,11 @@
 {% block access %}
     {% for i in posts.tags %}
         {% if posts.Music_Name is not none %}
-            <div class="col-md-auto offset-md-5" style="background-color: rgba(6,6,6,0.35);padding-right: 0px">
-                <label style="color: white;padding: 12px;margin: 1px">{{ posts.Music_Name }}</label>
+            <div class="col-md-7" style="padding-right: 0px">
+                <label style="color: white;background-color: rgba(6,6,6,0.35);padding: 12px;margin: 1px;float: right">{{ posts.Music_Name }}</label>
             </div>
             <div class="col-md-auto " style="text-align: right">
-                <audio id="music" controls preload="preload" autoplay="autoplay" loop="loop" style="">
+                <audio id="music" controls preload="preload" autoplay="autoplay" loop="loop" style="direction: rtl">
                     <source src="/static/Upload_Files/article/{{ posts.Dir_Name }}/{{ posts.Music_Name }}" type="audio/mpeg" />
                 </audio>
             </div>
