change markdown css

--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -96,8 +96,8 @@
 {% endblock musicname %}
 
 {% block content %}
-<div class="container-fluid" style="background-color: #ebebeb;padding-top: 70px;padding-bottom: 80px;">
-    <div class="text-left" style="margin-left: 150px; margin-right: 150px">
+<div class="container-fluid" style="background-color: #ebebeb;padding-top: 20px;padding-bottom: 20px;">
+    <div class="container" style="margin-left: 150px; margin-right: 150px; padding-top: 20px; background-color: white">
         {{ content | safe }}
     </div>
 </div>
