change article style

--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -97,7 +97,7 @@
 
 {% block content %}
 <div class="container-fluid" style="background-color: #ebebeb;padding-top: 20px;padding-bottom: 20px;">
-    <div class="container" style="margin-left: 150px; margin-right: 150px; padding-top: 20px; padding-bottom: 20px; background-color: white">
+    <div class="container" style=" padding-top: 5%; padding-bottom:5%; padding-left: 10%;padding-right: 10%; background-color: white">
         {{ content | safe }}
     </div>
 </div>
