change index big photo

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
 {% endblock style %}
 
 {% block photo %}
-    background: url(../static/img/header2.jpg) center;
+    background: url(../static/img/big-home.jpg) center;
 {% endblock photo %}
 
 {% block access %}
