--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -7,7 +7,7 @@
         line-height: 38px;
     }
     .message-card-container{
-        width: 689px;
+        width: auto;
         margin-right: auto;
         margin-left: auto;
     }
@@ -20,7 +20,7 @@
         width: 226px;
         height: 35px;
         border-radius: .3125rem;
-        background: #343232;
+        background: #343232b3;
         color: #fff;
     }
     .text-area{
@@ -41,7 +41,7 @@
         cursor: pointer;
         /* background: #343232 repeating-linear-gradient(-45deg,#2c2a2a,#2c2a2a 1.125rem,transparent 1.125rem,transparent 2.25rem); */
         color: #9e9e9e;
-        width: 689px;
+        width: auto;
         border: .0625rem solid #c8c8c8;
         margin: 0 auto;
         border-radius: .3125rem;
@@ -103,25 +103,24 @@
 </div>
 {% endblock content %}
 
-{% block comment %}
-    <div class="container-fluid" style="background-color: #2c2a2a; padding-bottom: 100px">
+{% block right_side %}
+    <div class="container-fluid" style="background-color: #2c2a2a69; padding-bottom: 100px">
         <br>
         <br>
         <div class="message-card-container">
             <div>
-                <h4 style="color: #1abc9c">添加新评论</h4>
+                <h4 style="color: white">添加新评论</h4>
             </div>
             <form method="post">
-                <div class="row">
+                <div class="row" style="padding-top: 10px;">
                     <div class="col-md-4">
                         <input type="text" name="nickname" placeholder="称呼" required="required">
                     </div>
-                    <div class="col-md-4">
+                </div>
+                <div class="row">
+                    <div class="col-md-4" style="padding-top: 10px;">
                         <input type="text" name="email" placeholder="电子邮件" required="required">
                     </div>
-    {#                <div class="col-md-4">#}
-    {#                    <input type="text" name="nickname" placeholder="">#}
-    {#                </div>#}
                 </div>
                 <textarea class="text-area" name="leavemessage" placeholder="在此输入您的评论" required="required"></textarea>
                 <br>
@@ -192,4 +191,4 @@
         }
 
     </script>
-{% endblock comment %}
+{% endblock right_side %}
