--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,9 @@
     container-fluaid{
         background-color: #3B3F45;
     }
+    body{
+        background-color: #2c2a2a;
+    }
 {% endblock style %}
 
 {% block photo %}
@@ -28,7 +31,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="container-fluid" style="background-color: #2c2a2a;padding-top: 70px;padding-bottom: 80px;">
+<div class="container-fluid" style="background-color: #2c2a2a69;padding-top: 70px;padding-bottom: 80px;">
 
     <div class="text-center" >
         <div id="firstpage" class="firstpage center" >         <!--首页默认文章列表-->
@@ -65,7 +68,7 @@
     {% if pagination.pages >= 1 %}
         <div class="post-select">
             <div class="row">
-                <div class="col-md-12 text-right">
+                <div class="col-md-12 text-center">
                     <select id="pages" style="margin-bottom: 80px;width: 130px;height: 40px;border-radius:9px;">
                         {% for i in range(pagination.pages) %}
                             <option value="{{ i+1 }}" >第{{ i+1 }}页</option>
@@ -75,14 +78,7 @@
             </div>
         </div>
     {% endif %}
-    <!--标签云-->
-    <div class="post-select">
-        <h5 style="color: #b0b0b0">标签云</h5>
-        <br>
-        {% for tag in index_tag %}
-            <a href="/tag/{{ tag.Id }}" class="tag">{{ tag.Title }}</a>
-        {% endfor %}
-    </div>
+
 
     <div id="copy" style="visibility: hidden; display: none">
 {#        <div style="padding-left: 322.6px;padding-right: 322.6px">#}
@@ -169,3 +165,16 @@
         </div>
     </div>
 {% endblock link %}
+
+{% block right_side %}
+    <div class="container-fluid" style="background-color: #2c2a2a69;padding-top: 70px;padding-bottom: 80px;">
+        <!--标签云-->
+        <div class="post-select">
+            <h5 style="color: white">标签云</h5>
+            <br>
+            {% for tag in index_tag %}
+                <a href="/tag/{{ tag.Id }}" class="tag">{{ tag.Title }}</a>
+            {% endfor %}
+        </div>
+    </div>
+{% endblock right_side %}
