--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -168,6 +168,9 @@
 
 {% block right_side %}
     <div class="container-fluid" style="background-color: #2c2a2a69;padding-top: 70px;padding-bottom: 80px;">
+        <!--头像-->
+        <img src="/static/img/logo.jpg" style="width: 70px;height: 70px;border-radius:40px">
+
         <!--标签云-->
         <div class="post-select">
             <h5 style="color: white">标签云</h5>
