--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,14 +20,13 @@
 {% endblock photo %}
 
 {% block access %}
-    <div class="col-md-auto offset-md-7" style="text-align: right">
-        <label class="text-right" style="color: #01b1bec7; padding: 6px; font-size: 13px; margin-right: 4px; margin-bottom: 0px;margin-top: 4px">第{{ all_access }}次浏览</label>
-    </div>
+{#    <div class="col-md-auto offset-md-7" style="text-align: right">#}
+{#        <label class="text-right" style="color: #01b1bec7; padding: 6px; font-size: 13px; margin-right: 4px; margin-bottom: 0px;margin-top: 4px">第{{ all_access }}次浏览</label>#}
+{#    </div>#}
 {% endblock access %}
 
 {% block title %}
-<h1 class="text-center" style="color: white;font-size: 60px; padding-top: 116px; margin-bottom: 0px">TF'S BLOG</h1> <br>
-<h3 class="text-center" style="color: #b5b5b5;font-size: 18px;margin-bottom: 0px; padding-bottom: 100px ">海到无边天作岸，山登绝顶我为峰</h3>
+<h1 class="text-center" style="color: white;font-size: 60px; padding-top: 90px;margin-bottom: 30px">TF'S BLOG</h1> <br>
 {% endblock title %}
 
 {% block content %}
@@ -169,8 +168,16 @@
 {% block right_side %}
     <div class="container-fluid" style="background-color: #2c2a2a69;padding-top: 70px;padding-bottom: 80px;">
         <!--头像-->
-        <img src="/static/img/logo.jpg" style="width: 70px;height: 70px;border-radius:40px">
-
+        <div class="row align-items-center" style="padding-left: 10px">
+            <img src="/static/img/logo.jpg" style="width: 70px;height: 70px;border-radius:40px">
+            <h4 style="color: white;padding-left: 10px;">PEAK</h4>
+        </div>
+        <!--格言-->
+        <div class="row" style="padding-left: 10px">
+            <i class="" style="color: #b5b5b5;font-size: 18px;margin-top: 10px;margin-bottom: 0px; padding-bottom: 10px ">海到无边天作岸，山登绝顶我为峰</i>
+        </div>
+        <!--浏览量-->
+        <label class="" style="color: #72eff8c7; padding: 6px; font-size: 14px;padding: 0px;margin-bottom: 0px;margin-top: 4px">第{{ all_access }}次浏览</label>
         <!--标签云-->
         <div class="post-select">
             <h5 style="color: white">标签云</h5>
