--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -17,7 +17,7 @@
         display: inline-block;
         padding: .438rem .525rem;
         border: 0;
-        width: 226px;
+        width: 200%;
         height: 35px;
         border-radius: .3125rem;
         background: #343232b3;
@@ -28,7 +28,7 @@
         padding: .438rem .525rem;
         border: 0;
         border-radius: .3125rem;
-        background: #343232;
+        background: #343232b3;
         color: #fff;
         overflow-y: visible;
         margin-top: .625rem;
@@ -71,7 +71,7 @@
     {% for i in posts.tags %}
         {% if posts.Music_Name is not none %}
             <div class="col-md-7" style="padding-right: 0px">
-                <label style="color: white;background-color: rgba(6,6,6,0.35);padding: 12px;margin: 1px;float: right">{{ posts.Music_Name }}</label>
+                <label style="color: white;background-color: #06060659;padding: 12px;margin: 1px;float: right">{{ posts.Music_Name }}</label>
             </div>
             <div class="col-md-auto " style="text-align: right;padding-left: 0px">
                 <audio id="music" controls preload="preload" autoplay="autoplay" loop="loop" style="direction: rtl;">
@@ -96,15 +96,15 @@
 {% endblock musicname %}
 
 {% block content %}
-<div class="container-fluid" style="background-color: #ebebeb;padding-top: 20px;padding-bottom: 20px;">
-    <div class="container" style=" padding-top: 5%; padding-bottom:5%; padding-left: 10%;padding-right: 10%; background-color: white">
+<div class="container-fluid" style="background-color: #ebebeb00;padding-bottom: 20px;">
+    <div class="container" style=" padding-top: 5%; padding-bottom:5%; padding-left: 10%;padding-right: 10%; background-color: #ffffff8a; border-radius: .5rem">
         {{ content | safe }}
     </div>
 </div>
 {% endblock content %}
 
 {% block right_side %}
-    <div class="container-fluid" style="background-color: #2c2a2a69; padding-bottom: 100px">
+    <div class="container-fluid" style="background-color: #2c2a2a69; padding-bottom: 100px;border-radius: 0.5rem">
         <br>
         <br>
         <div class="message-card-container">
@@ -158,7 +158,7 @@
                                 <div class="col-md-auto"><h7 style="color: #1abc9c">{{ comments[i].Name }}</h7></div>
                                 {% if comments[i].Name == "落风" %}
                                     <div class="col-md-auto" style="height: .25rem">
-                                        <label  style="background: rgba(185,147,4,0.84);border-radius: .25rem;color: #fff;font-size: 0.75rem;margin-left: -25px">博主</label>
+                                        <label  style="background: #b99304d6;border-radius: .25rem;color: #fff;font-size: 0.75rem;margin-left: -25px">博主</label>
                                     </div>
                                 {% endif %}
                             </div>
