--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
         },20);
         <!-- 加载中-->
         document.onreadystatechange = function () {
-            if(document.readyState === "complete"){
+            if(document.readyState === "interactive"){
                 $("#loading").fadeOut();
             }
         }
@@ -55,7 +55,7 @@
             padding: 4px;
             border-radius: .25rem;
             text-decoration: none;
-            background-color: #4b4949;
+            background-color: #83c20096;
             transition: all 0.6s;
         }
         .tag:hover{
@@ -63,13 +63,24 @@
             text-decoration: none;
             color: #1abc9c;
         }
+        a.icon{
+            color: #d8d8d8;
+            text-decoration: none;
+            transition: all 0.6s;
+        }
+        a.icon:hover{
+            text-decoration: none;
+            color: #1abc9c;
+        }
+        span.list{
+            color: #3bcae3;
+        }
         .firstpage{
             margin-right: auto;
             margin-left: auto;
         }
-        .post-select{
-            height: 100px;
-            width: 844px;
+        .right-module{
+            width: auto;
             margin-right: auto;
             margin-left: auto;
             padding-top: 60px;
@@ -128,9 +139,18 @@
             display: inline-block;
             vertical-align: middle;
         }
-
-
-
+        hr.faded {
+            clear: both;
+            float: none;
+            width: 100%;
+            height: 1px;
+            line-height: 0.5px;
+            font-size: 0;
+            border: none 0;
+            margin: 1.4em 0;
+            border: none;
+            background: #ddd;
+        }
 
         {% block style %}
         {% endblock style %}
@@ -193,13 +213,13 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-9" style="padding: 0px;">
+        <div class="col-md-9" style="padding: 0px;padding-top: 20px;">
             <!-- 内容正文 -->
             {% block content %}
             {% endblock content %}
         </div>
-        <div class="col-md-3">
-            <!-- 评论区 -->
+        <div class="col-md-3" style="padding-top: 20px;">
+            <!-- 右栏 -->
             {% block right_side %}
             {% endblock right_side %}
         </div>
