change post-card style

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,12 +35,11 @@
         .post-card-container {
             background-size: cover;
             background-position: center;
-
             overflow: hidden;
             opacity: 1;
             background-repeat: no-repeat;
-            height: 248px;
-            width: 844px;
+            height: 14rem;
+            width: 40rem;
             border-radius:9px;
             padding-top: 90px;
             padding-bottom: 90px;
