--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
         <div id="firstpage" class="firstpage center" >         <!--首页默认文章列表-->
                 {% if lenth != 0 %}
                     {% for i in range(lenth) %}
-                            <a href="/post/{{ user_Post[i].Publish_Date.year }}/{{ user_Post[i].Publish_Date.month }}/{{ user_Post[i].Id }}" style="text-decoration: none;">
+                            <a class="text-center" href="/post/{{ user_Post[i].Publish_Date.year }}/{{ user_Post[i].Publish_Date.month }}/{{ user_Post[i].Id }}" style="text-decoration: none;">
                                 <div class="post-card-container" onmouseover="funcon" onmouseout="funcout" style="background-image: url(../static/Upload_Files/article/{{ user_Post[i].Dir_Name }}/{{ user_Post[i].Cover_Picture_Name }});">
                                     <h2 class="posttitle">{{ user_Post[i].Title }}</h2>
                                     <br>
