update index style

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -155,7 +155,7 @@
 {#{% endblock link %}#}
 
 {% block right_side %}
-    <div class="container-fluid" style="background-color: #2c2a2a69;position: relative;overflow:hidden">
+    <div class="container-fluid" style="background-color: #2c2a2aad;position: relative;overflow:hidden">
         <br>
         <!--头像-->
         <div class="row align-items-center" style="padding-left: 10px">
@@ -183,7 +183,8 @@
             <a class="link" href="https://me.csdn.net/ha_weii">• Minz的博客</a><br>
             <a class="link" href="https://me.csdn.net/salove_y">• 携手凡生的博客</a><br>
             <a class="link" href="http://blog.51cto.com/anfishr">• 一百个小排的博客</a><br>
-            <div class="text-center"><a href="#" class="icon"><img src="/static/font/more2.png" class="" style="width: 30px;height: 10px">更多</a></div>
+            <a href="/addurl" class="icon" style="color: #d4237a;"><img src="/static/font/addurl.png" class="" style="width: 25px;height: 25px">互加友链</a>
+            <div class="text-center"><a href="#" class="icon"><img src="/static/font/more2.png" class="" style="width: 30px;height: 15px">更多</a></div>
 
         </div>
         <!--站点信息-->
