--- a/app/templates/tag_details.html
+++ b/app/templates/tag_details.html
@@ -11,7 +11,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="container-fluid" style="background-color: #2c2a2a;padding-top: 70px;padding-bottom: 80px;">
+<div class="container-fluid" style="background-color: #2c2a2a69;padding-top: 70px;padding-bottom: 80px;">
     <div class="text-center" >
         <div id="firstpage" class="center">
             {% if lenth != 0 %}
