--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -179,7 +179,7 @@
             <h5 style="color: white">友情链接</h5><hr class="faded">
             <br>
             <a class="link" href="http://git.careyou.xin">• MyGitHub</a><br>
-            <a class="link" href="http://rooins.careyou.xin" >• 袋鼠共享打印</a><br>
+            <a class="link" href="http://www.daoink.com" >• 袋鼠共享打印</a><br>
             <a class="link" href="https://me.csdn.net/ha_weii">• Minz的博客</a><br>
             <a class="link" href="https://me.csdn.net/salove_y">• 携手凡生的博客</a><br>
             <a class="link" href="http://blog.51cto.com/anfishr">• 一百个小排的博客</a><br>
