--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,7 @@
         .post-card-container {
             background-size: cover;
             background-position: center;
+            background-color: #5a6268;
             overflow: hidden;
             opacity: 1;
             background-repeat: no-repeat;
@@ -43,10 +44,12 @@
             border-radius:9px;
             padding-top: 90px;
             padding-bottom: 90px;
-            box-shadow: 0 1px 7px rgba(224, 219, 219, 0.37);
+            box-shadow: 0 1px 7px rgba(0, 188, 212, 0.56);
             transition: all 0.6s;/*所有属性变化在0.6秒内执行动画*/
         }
         .post-card-container:hover{
+            box-shadow:-20px -30px 15px rgba(0,0,0,0.2);
+            transform:skew(10deg,10deg) translate(40px,30px);
             transform: scale(1.1);/*鼠标放上之后元素变成1.4倍大小*/
         }
         .tag{
@@ -111,6 +114,8 @@
             transition: all 0.6s;/*所有属性变化在0.6秒内执行动画*/
         }
         .function-card:hover{
+            transform:skew(4deg, 2deg) translate(6px, 7px);
+            border-bottom-right-radius: 60px 5px;
             transform: scale(1.1);/*鼠标放上之后元素变成1.4倍大小*/
         }
         #loading{
