--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -86,7 +86,7 @@
 
 {% block content %}
 <div class="container-fluid" style="background-color: #ebebeb00;padding-bottom: 20px;">
-    <div class="container" style=" padding-top: 5%; padding-bottom:5%; padding-left: 10%;padding-right: 10%; background-color: #ffffff8a; border-radius: .5rem">
+    <div class="container" style=" padding-top: 5%; padding-bottom:5%; padding-left: 10%;padding-right: 10%; background-color: rgba(255,255,255,0.83); border-radius: .5rem">
         {{ content | safe }}
     </div>
 </div>
